Fix(forum) : Correction bug d'affichage liste des articles en version mobile

--- a/plugins/mel_forum/skins/mel_elastic/less/mel_forum.less
+++ b/plugins/mel_forum/skins/mel_elastic/less/mel_forum.less
@@ -1295,4 +1295,11 @@
     cursor: pointer;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   }
+
+  @media (max-width: 768px) { /* ou une autre largeur en pixels correspondant au mobile */
+    #layout > div > .footer {
+      display: none; /* Cache complètement la div */
+    }
+  }
+  
 }
